Demo/BlazorFluentUI.Demo.Client/wwwroot/css/site.css
/* ... */
    .sidebar .top-row {
        background-color: rgba(0,0,0,0.4);
    }

    .sidebar .navbar-brand {
        font-size: 1.1rem;
    }

    .sidebar .oi {
        width: 2rem;
        font-size: 1.1rem;
        vertical-align: text-top;
        top: -2px;
    }

/*.nav-item {
    font-size: 0.9rem;
    padding-bottom: 0.5rem;
}

    .nav-item:first-of-type {
        padding-top: 1rem;
    }

    .nav-item:last-of-type {
        padding-bottom: 1rem;
    }

    .nav-item a {
        color: #d7d7d7;
        border-radius: 4px;
        height: 3rem;
        display: flex;
        align-items: center;
        line-height: 3rem;
    }

        .nav-item a.active {
            background-color: rgba(255,255,255,0.25);
            color: white;
        }

        .nav-item a:hover {
            background-color: rgba(255,255,255,0.1);
            color: white;
        }*/

.content {
    /*padding-top: 1.1rem;*/
    /*overflow-y: auto;
    height: 100%;*/
    /*height: calc(100% - 53.5px);*/
}

.navbar-toggler {
    background-color: rgba(255, 255, 255, 0.1);
}

.valid.modified:not([type=checkbox]) {
    outline: 1px solid #26b050;
}

.invalid {
    outline: 1px solid red;
}

.validation-message {
    color: red;
}

.textFieldDiv {
    margin: 5px 0px;
    width: 400px;
}

.iconExample {
    font-size: 50px;
}

    .iconExample.red {
        color: red;
    }





.Page {
    position: relative
}

.sectionWrapper {
    max-width: 1080px
}

.section {
    background: #fff;
    padding: 28px;
    margin-bottom: 28px;
    border-radius: 2px;
    background-clip: padding-box;
    -webkit-box-shadow: 0 1.6px 3.6px 0 rgba(0,0,0,.132),0 .3px .9px 0 rgba(0,0,0,.108);
    box-shadow: 0 1.6px 3.6px 0 rgba(0,0,0,.132),0 .3px .9px 0 rgba(0,0,0,.108);
    position: relative;
    //opacity: 0;
    -webkit-transform: translate3d(0,48px,0);
    transform: translate3d(0,48px,0);
    -webkit-transition: opacity .3s cubic-bezier(.1,.9,.2,1) 50ms,-webkit-transform .3s cubic-bezier(.1,.9,.2,1);
    transition: opacity .3s cubic-bezier(.1,.9,.2,1) 50ms,-webkit-transform .3s cubic-bezier(.1,.9,.2,1);
    transition: transform .3s cubic-bezier(.1,.9,.2,1),opacity .3s cubic-bezier(.1,.9,.2,1) 50ms;
    transition: transform .3s cubic-bezier(.1,.9,.2,1),opacity .3s cubic-bezier(.1,.9,.2,1) 50ms,-webkit-transform .3s cubic-bezier(.1,.9,.2,1)
}

    .section:last-child {
        margin-bottom: 0
    }

    .section ul.uListFlex {
        display: -webkit-box;
        display: -ms-flexbox;
        display: flex;
        -ms-flex-wrap: wrap;
        flex-wrap: wrap;
        margin-bottom: -12px
    }

[dir=ltr] .section ul.uListFlex {
    padding-left: 0
}

[dir=rtl] .section ul.uListFlex {
    padding-right: 0
}


.section ul.uListFlex li {
    list-style: none;
    margin-bottom: 12px
}

[dir=ltr] .section ul.uListFlex li {
    margin-right: 28px
}

[dir=rtl] .section ul.uListFlex li {
    margin-left: 28px
}

.section ul.uListFlex > .uThird {
    -ms-flex-preferred-size: calc(33% - 28px);
    flex-basis: calc(33% - 28px)
}

.section .ms-mdTable-wrapper {
    width: 100%;
    overflow-x: auto;
    margin-bottom: 20px;
    background: -webkit-gradient(linear,left top,right top,from(#fff),to(rgba(255,255,255,0))) left/48px 100% local,-webkit-gradient(linear,right top,left top,from(#fff),to(rgba(255,255,255,0))) right/48px 100% local,-webkit-gradient(linear,left top,right top,from(#edebe9),to(rgba(237,235,233,0))) left/12px 100% scroll,-webkit-gradient(linear,right top,left top,from(#edebe9),to(rgba(237,235,233,0))) right/12px 100% scroll;
    background: linear-gradient(to right,#fff,rgba(255,255,255,0)) left/48px 100% local,linear-gradient(to left,#fff,rgba(255,255,255,0)) right/48px 100% local,linear-gradient(to right,#edebe9,rgba(237,235,233,0)) left/12px 100% scroll,linear-gradient(to left,#edebe9,rgba(237,235,233,0)) right/12px 100% scroll;
    background-repeat: no-repeat
}

.section .ms-mdImage img {
    max-width: 100%;
    margin: 8px 0
}

.isMountedOffset .section {
    opacity: 1;
    -webkit-transform: translate3d(0,0,0);
    transform: translate3d(0,0,0)
}

.content ol, .content p, .content ul {
    font-size: 16px
}

.content p, .content pre {
    margin-top: 0;
    margin-bottom: 1.2em
}

    .content p:last-child, .content pre:last-child {
        margin-bottom: 0
    }

[dir=ltr] .content ol, [dir=ltr] .content ul {
    padding-left: 20px
}

[dir=rtl] .content ol, [dir=rtl] .content ul {
    padding-right: 20px
}

.content ul li {
    list-style: disc
}

    .content ul li ul {
        padding-top: 8px
    }

        .content ul li ul li {
            list-style-type: circle
        }

.content li {
    margin-bottom: 8px
}

.content hr {
    border: 0;
    height: 1px;
    background: #979593;
    margin: 1.2em 0
}

.edit {
    opacity: 0;
    -webkit-transition: opacity .2s ease;
    transition: opacity .2s ease
}

    .edit:focus, .edit:focus-within, .edit:hover {
        opacity: 1
    }

@media (hover:none) {
    .edit {
        opacity: 1
    }
}

.edit a.ms-Button {
    height: 20px
}

.subSection {
    margin-bottom: 36px
}

    .subSection:last-child {
        margin-bottom: 0
    }

.sectionHeader {
    margin-bottom: 20px;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center
}

    .sectionHeader:hover .edit {
        opacity: 1
    }

.hiddenContent {
    position: absolute;
    width: 1px;
    height: 1px;
    margin: -1px;
    padding: 0;
    border: 0;
    overflow: hidden
}

.smallSubHeading, .subHeading {
    color: #323130;
    font-weight: 600;
    line-height: 1;
    margin-top: 0;
    margin-bottom: 0
}

.subHeading {
    font-size: 24px;
    outline: 0
}

.smallSubHeading {
    font-size: 20px
}
/* ... */

